// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioSchedule should render ltr radio schedules correctly 1`] = `
@media (max-width:14.9375rem) {
  .emotion-34 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-34 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-34 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .emotion-34 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
      padding: 0 1rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-34 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}
}

@media (max-width:14.9375rem) {
  .emotion-10 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-10 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-10 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-10 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-10 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-10 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-10 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-10 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-10 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-10 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-10 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-10 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}

@media (min-width:80rem) {
    .emotion-10 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <ul
    class="StyledGrid-sc-1q74lji-1 dHsDNK emotion-34 emotion-11"
    dir="ltr"
    role="list"
  >
    <li
      class="StyledFlexGrid-sc-1q74lji-2 itXDho emotion-10 emotion-11"
      data-e2e="live"
      dir="ltr"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 iKXvCy"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 cUASrx"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 ihgFOy"
          >
            <a
              class="StyledLink-sc-6oo8lp-1 drnVCd emotion-6 emotion-7"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                <span
                  role="text"
                >
                  <span
                    aria-hidden="true"
                    class="emotion-0 emotion-1"
                    dir="ltr"
                  >
                    LIVE 
                  </span>
                  <span
                    class="emotion-2 emotion-3"
                    lang="en-GB"
                  >
                    Live, 
                  </span>
                </span>
                Could a computer ever create better art than a human?
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 kqgECY"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 kPODHC"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 fMidIG"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-2 emotion-3"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="StyledFlexGrid-sc-1q74lji-2 itXDho emotion-10 emotion-11"
      data-e2e="onDemand"
      dir="ltr"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 iKXvCy"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 cUASrx"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 ihgFOy"
          >
            <a
              class="StyledLink-sc-6oo8lp-1 drnVCd emotion-6 emotion-7"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                Could a computer ever create better art than a human?
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 kqgECY"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 fastOq"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 fMidIG"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-2 emotion-3"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="StyledFlexGrid-sc-1q74lji-2 itXDho emotion-10 emotion-11"
      data-e2e="onDemand"
      dir="ltr"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 iKXvCy"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 cUASrx"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 ihgFOy"
          >
            <a
              class="StyledLink-sc-6oo8lp-1 drnVCd emotion-6 emotion-7"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                Could a computer ever create better art than a human?
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 kqgECY"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 fastOq"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 fMidIG"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-2 emotion-3"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="StyledFlexGrid-sc-1q74lji-2 itXDho emotion-10 emotion-11"
      data-e2e="next"
      dir="ltr"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 iKXvCy"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 cUASrx"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 hlWgZt"
          >
            <span
              class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
              role="text"
            >
              <span
                class="NextLabel-sc-6oo8lp-5 kzBJH"
                dir="ltr"
              >
                NEXT 
              </span>
              Could a computer ever create better art than a human?
              <span
                class="emotion-2 emotion-3"
              >
                , 
                14:54
                , 
              </span>
              <span
                class="TitleWrapper-sc-6oo8lp-0 gaBXGU"
              >
                27 August 2019
              </span>
            </span>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 glhZpD"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 gqyxry"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 fMidIG"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-2 emotion-3"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`RadioSchedule should render rtl radio schedules correctly 1`] = `
@media (max-width:14.9375rem) {
  .emotion-32 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-32 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-32 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .emotion-32 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
      padding: 0 1rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-32 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}
}

@media (max-width:14.9375rem) {
  .emotion-8 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-8 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-8 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-8 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-8 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-8 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-8 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-8 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-8 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-8 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-8 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-8 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}

@media (min-width:80rem) {
    .emotion-8 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(2,1fr);
      grid-column-end: span 2;
    }
}
}

.emotion-4 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-4:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited {
  color: #6E6E73;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-0 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-left: 0.5rem;
}

<div>
  <ul
    class="StyledGrid-sc-1q74lji-1 dHsDNK emotion-32 emotion-9"
    dir="rtl"
    role="list"
  >
    <li
      class="StyledFlexGrid-sc-1q74lji-2 itXDho emotion-8 emotion-9"
      data-e2e="live"
      dir="rtl"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 gushnz"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 extvvV"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 bQOdKp"
          >
            <a
              class="StyledLink-sc-6oo8lp-1 drnVCd emotion-4 emotion-5"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                <span
                  role="text"
                >
                  <span
                    class="emotion-0 emotion-1"
                    dir="rtl"
                  >
                    مباشر 
                  </span>
                </span>
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 eEiwMK"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 jyGpUG"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-2 emotion-3"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="StyledFlexGrid-sc-1q74lji-2 itXDho emotion-8 emotion-9"
      data-e2e="onDemand"
      dir="rtl"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 gushnz"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 extvvV"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 bQOdKp"
          >
            <a
              class="StyledLink-sc-6oo8lp-1 drnVCd emotion-4 emotion-5"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 eEiwMK"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 bVNTNn"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-2 emotion-3"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="StyledFlexGrid-sc-1q74lji-2 itXDho emotion-8 emotion-9"
      data-e2e="onDemand"
      dir="rtl"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 gushnz"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 extvvV"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 bQOdKp"
          >
            <a
              class="StyledLink-sc-6oo8lp-1 drnVCd emotion-4 emotion-5"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 eEiwMK"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 bVNTNn"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-2 emotion-3"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="StyledFlexGrid-sc-1q74lji-2 itXDho emotion-8 emotion-9"
      data-e2e="next"
      dir="rtl"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 gushnz"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 extvvV"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 dhiUqF"
          >
            <span
              class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
              role="text"
            >
              <span
                class="NextLabel-sc-6oo8lp-5 inodZf"
                dir="rtl"
              >
                مباشر 
              </span>
              لماذا يخجل البعض من اسم قريته في مصر؟
              <span
                class="emotion-2 emotion-3"
              >
                , 
                ١٤:٥٤
                , 
              </span>
              <span
                class="TitleWrapper-sc-6oo8lp-0 dDIrbk"
              >
                ٢٧ أغسطس ٢٠١٩
              </span>
            </span>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 eXCEFe"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 gqyxry"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-2 emotion-3"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
